# Systash

./: .gitignore  Cargo.toml  README.md
config/: systash.toml
data/: README.md
data/nfs_setup/defaults/: main.yml
data/nfs_setup/tasks/: main.yml
data/nfs_setup/templates/: export.j2
data/nfs_setup/tests/: test.yml
data/nfs_setup/vars/: main.yml
data/system_manager/defaults/: main.yml
data/system_manager/handlers/: main.yml
data/system_manager/tasks/: main.yml
data/system_manager/templates/: systash.conf
data/system_manager/tests/: test.yml
data/system_manager/vars/: main.yml
src/: catalog.rs  cli.rs  commander.rs  compression.rs  config_parser.rs  configparser.rs  data_manager.rs  db.rs  file_manager.rs  filesystem.rs  hasher.rs  main.rs  remote_exec.rs  service_manager.rs
src/OpenShift/: README.md  mod.rs
src/OpenStack/: README.md  mod.rs
src/commander/: mod.rs
