[package]
name = "systash"
version = "0.1.0"
authors = ["Toure Dunnon <tdunnon@gmail.com>"]
edition = "2018"

[dependencies]
structopt = "0.3.0"
flate2 = "1.0.11"
tar = "0.4.26"
serde = "1.0.102"
serde_derive = "1.0.102"
serde_yaml = "0.8.11"
rusqlite = "0.20.0"
ring = "0.16.9"
data-encoding = "2.1.2"
openstack = "0.3.2"